proc_macro1/crates/fields/tests/ui/compile_fail.stderr
error: expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
 --> tests/ui/compile_fail.rs:2:30
  |
2 |     fields::fields!(field1 = "abc");
  |                              ^^^^^
