proc_macro1/crates/fields/tests/ui/compile_fail.rs
fn main() {
    fields::fields!(field1 = "abc");
}
